update encodings to include missing studies

--- a/studies/bib/extractions.bib
+++ b/studies/bib/extractions.bib
@@ -13,7 +13,7 @@
   KEYWORDS = {Character recognition; Emotion Recognition; Learning systems; Recurrent neural networks; Regression analysis; Storms; Auto encoders; Emotion classification; Emotion recognition; Feature representation; Hidden layers; High-level features; K-medoid; Music emotions; Support vector regression models; Support vector regressions; Music},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85116929889&doi = 10.1049%2fsil2.12015&partnerID = 40&md5 = 4e078ee8b1c740d21d4b7d8dbf7f6cd8},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85116929889&doi = 10.1049},
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
   NOTES_TE = {include, classification},
@@ -75,7 +75,7 @@
   ABSTRACT = {The music emotions can help to improve the personalization of services and contents offered by music streaming providers. Many research works based on the use of machine learning techniques have addressed the problem of recognising the music emotions during the last years. Nevertheless, the results obtained are only applied on small-size music repositories and do not consider what the users feel when they listen to the songs. These issues prevent the existing proposals to be integrated into the personalization mechanisms of the online music providers. In this paper, we present the RIADA infrastructure which is composed by a set of systems able to annotate emotionally the catalog of songs offered by Spotify based on the users’ perception. RIADA works with the Spotify playlist miner and data services to build emotion recognition models that can solve the open challenges previously mentioned. Machine learning algorithms, music information retrieval techniques, architectures for parallelization of applications and cloud computing have been combined to develop a complex result of engineering able to integrate the music emotions into the Spotify-based applications. © 2023, Universidad Internacional de la Rioja. All rights reserved.},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85147947463&doi = 10.9781%2fijimai.2022.04.002&partnerID = 40&md5 = 8f61f829c998052047f5da67adcf48c9},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85147947463&doi = 10.9781},
   AUTHOR_KEYWORDS = {Affective Annotation; Cloud Computing; Emotion Recognition; Machine Learning; Music; Spotify},
   PARADIGM = {classification},
   NOTES_CA = {include, classification task},
@@ -129,7 +129,7 @@
   KEYWORDS = {Artificial intelligence; Arts computing; Barium compounds; Discriminant analysis; Feature extraction; Fuzzy neural networks; Image retrieval; Learning systems; Nearest neighbor search; Pattern recognition; Psychophysiology; Support vector machines; Affective Computing; Classification methodologies; Emotion classification; K nearest neighbor (KNN); Linear discriminant analysis; Multiple disciplines; Music emotions; Neuro-fuzzy network; Learning algorithms},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85038434665&doi = 10.4018%2fIJCINI.2017100105&partnerID = 40&md5 = a2e1f1d69ab6ceb6f0cee7f2eb26985a},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85038434665&doi = 10.4018},
   AUTHOR_KEYWORDS = {Emotion Classification; Feature Extraction; Machine Learning; Music Emotion Recognition; Pattern Recognition},
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
@@ -190,7 +190,7 @@
   ABSTRACT = {The complex synthesis of emotions seen in music is meticulously composed using a wide range of aural components. Given the expanding soundscape and abundance of online music resources, creating a music recommendation system is significant. The area of music file emotion recognition is particularly fascinating. The RGRU (Enhanced Residual Gated Recurrent Unit), a complex architecture, is used in our study to look at MIDI (Musical Instrument and Digital Interface) compositions for detecting emotions. This involves extracting diverse features from the MIDI dataset, encompassing harmony, rhythm, dynamics, and statistical attributes. These extracted features subsequently serve as input to our emotion recognition model for emotion detection. We use an improved RGRU version to identify emotions and the Adaptive Red Fox Algorithm (ARFA) to optimize the RGRU hyperparameters. Our suggested model offers a sophisticated classification framework that effectively divides emotional content into four separate quadrants: positive-high, positive-low, negative-high, and negative-low. The Python programming environment is used to implement our suggested approach. We use the EMOPIA dataset to compare its performance to the traditional approach and assess its effectiveness experimentally. The trial results show better performance compared to traditional methods, with higher accuracy, recall, F-measure, and precision. Copyright © 2023 Kumar and Kathiravan.},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85181443074&doi = 10.3389%2ffcomp.2023.1305413&partnerID = 40&md5 = 977f4cd7e7b4a9a110b29a8f48b0e632},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85181443074&doi = 10.3389},
   AUTHOR_KEYWORDS = {adaptive Red Fox algorithm; EMOPIA; emotion recognition; Enhanced Residual Gated Recurrent Unit; Musical Instrument Digital Interface},
   PARADIGM = {classification},
   NOTES_CA = {include, quadrant classification},
@@ -348,7 +348,7 @@ MODEL_RATE_EMOTION_VALUES_FULL_REDUCED2D = { rbind(
   KEYWORDS = {Quality control; BiLSTM; Classification models; DTW; Emotion classification; Informatization; Music evaluation; PYIN; Teaching methods; TextCNN; Traditional music; Classification (of information)},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85192244090&doi = 10.2478%2famns-2024-0973&partnerID = 40&md5 = f61a9cbc265402b97c5600f8b5f1d679},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85192244090&doi = 10.2478},
   AUTHOR_KEYWORDS = {BiLSTM; DTW; Music evaluation; PYIN; TextCNN; Traditional music},
   PARADIGM = {classification},
   NOTES_CA = {include, classification task},
@@ -393,7 +393,7 @@ MODEL_RATE_EMOTION_VALUES_FULL_REDUCED2D = { rbind(
   ABSTRACT = {In this paper, we propose an approach for music emotion recognition based on convolutional long short term memory deep neural network (CLDNN) architecture. In addition, we construct a new Turkish emotional music database composed of 124 Turkish traditional music excerpts with a duration of 30 s each and the performance of the proposed approach is evaluated on the constructed database. We utilize features obtained by feeding convolutional neural network (CNN) layers with log-mel filterbank energies and mel frequency cepstral coefficients (MFCCs) in addition to standard acoustic features. Classification results show that the best performance is obtained when the new feature set is combined with the standard features using the long short term memory (LSTM) + deep neural network (DNN) classi fier. The overall accuracy of 99.19% is obtained using the proposed system with 10 fold cross-validation. Specifically, 6.45 points improvement is achieved. Additionally, the results also show that the LSTM + DNN classifier yields 1.61, 1.61 and 3.23 points improvements in music emotion recognition accuracies compared to k-nearest neighbor (k-NN), support vector machine (SVM), and Random Forest classifiers, respectively. © 2020 Karabuk University},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85096857185&doi = 10.1016%2fj.jestch.2020.10.009&partnerID = 40&md5 = a6d9948932df1065662495509f77bfe5},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85096857185&doi = 10.1016},
   AUTHOR_KEYWORDS = {Convolutional long short term memory deep neural networks; Music emotion recognition; Turkish emotional music database},
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
@@ -464,7 +464,7 @@ MODEL_RATE_EMOTION_VALUES_LSTM-DNN = {
   KEYWORDS = {Classification (of information); Convolutional neural networks; Deep learning; Frequency domain analysis; Music; Network architecture; Convolutional neural network; Emotion; Emotion recognition; Indian classical music; Learning techniques; Multifractal detrended fluctuation analysis; Multifractal technique; Music emotions; Network-based architectures; Research areas; Fractals},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85127732290&doi = 10.1016%2fj.physa.2022.127261&partnerID = 40&md5 = 634cc77ee93e9ac834ca0dad8b815119},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85127732290&doi = 10.1016},
   AUTHOR_KEYWORDS = {Classification; CNN; Emotions; Indian Classical Music; Instruments; MFDFA},
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
@@ -509,7 +509,7 @@ MODEL_RATE_EMOTION_VALUES_LSTM-DNN = {
   ABSTRACT = {This paper proposes an emotion detection method using a combination of dimensional approach and categorical approach. Thayer's model is divided into discrete emotion sections based on the level of arousal and valence. The main objective of the method is to increase the number of detected emotions which is used for emotion visualization. To evaluate the suggested method, we conducted various experiments with supervised learning and feature selection strategies. We collected 300 music clips with emotions annotated by music experts. Two feature sets are employed to create two training models for arousal and valence dimensions of Thayer's model. Finally, 36 music emotions are detected by proposed method. The results showed that the suggested algorithm achieved the highest accuracy when using RandomForest classifier with 70% and 57.3% for arousal and valence, respectively. These rates are better than previous studies. © 2017 Institute of Advanced Engineering and Science.},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85021156960&doi = 10.11591%2fijece.v7i3.pp1246-1254&partnerID = 40&md5 = c3ac2cfa0f3a859b3232ebd8875ba59b},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85021156960&doi = 10.11591},
   AUTHOR_KEYWORDS = {Feature extraction; Music emotion recognition algorithm; Music information retrieval; Music mood detection},
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
@@ -571,7 +571,7 @@ MODEL_RATE_EMOTION_VALUES_VALENCE = {rbind(
   KEYWORDS = {Feature extraction; Speech recognition; Textures; 10-fold cross-validation; Affective Computing; Audio database; Emotion recognition; Interactive media; Music information retrieval; Music interfaces; Musical concepts; Audio acoustics},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85044777756&doi = 10.1109%2fTAFFC.2018.2820691&partnerID = 40&md5 = 6ff59839d539ee19db6d2a75a843d7d6},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85044777756&doi = 10.1109},
   AUTHOR_KEYWORDS = {Affective computing; audio databases; emotion recognition; feature extraction; music information retrieval},
   PARADIGM = {classification},
   NOTES_CA = {include, quadrant classification},
@@ -616,7 +616,7 @@ MODEL_RATE_EMOTION_VALUES_VALENCE = {rbind(
   ABSTRACT = {Music selection is diffcult without effcient organization based on metadata or tags, and one effective tag scheme is based on the emotion expressed by the music. However, manual annotation is labor intensive and unstable because the perception of music emotion varies from person to person. This paper presents an emotion classi cation system for digital music with a resolution of eight emotional classes. Russell’s emotion model was adopted as common ground for emotional annotation. The music information retrieval (MIR) toolbox was employed to extract acoustic features from audio les. The classi cation system utilized a supervised machine learning technique to recognize acoustic features and create predictive models. Four predictive models were proposed and compared. The models were composed by crossmatching two types of neural networks, the Levenberg-Marquardt (LM) and resilient backpropagation (Rprop), with two types of structures: a traditional multiclass model and the cascaded structure of a binary-class model. The performance of each model was evaluated via the MediaEval Database for Emotional Analysis (DEAM) benchmark. The best result was achieved by the model trained with the cascaded Rprop neural network (accuracy of 89.5%). In addition, correlation coeffcient analysis showed that timbre features were the most impactful for prediction. Our work offers an opportunity for a competitive advantage in music classi cation because only a few music providers currently tag music with emotional terms. © 2020, ECTI Association Sirindhon International Institute of Technology. All rights reserved.},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85084006024&doi = 10.37936%2fecti-cit.2020141.205317&partnerID = 40&md5 = 508dd81e9a9120b0c6e87d44e90a2d5a},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85084006024&doi = 10.37936},
   AUTHOR_KEYWORDS = {Articial neural networks; Classi cation algorithms; Emotion recognition; Music information retrieval},
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
@@ -659,7 +659,7 @@ MODEL_RATE_EMOTION_VALUES_VALENCE = {rbind(
   ABSTRACT = {Music plays an extremely important role in people’s production and life. The amount of music is growing rapidly. At the same time, the demand for music organization, classification, and retrieval is also increasing. Paying more attention to the emotional expression of creators and the psychological characteristics of music are also indispensable personalized needs of users. The existing music emotion recognition (MER) methods have the following two challenges. First, the emotional color conveyed by the first music is constantly changing with the playback of the music, and it is difficult to accurately express the ups and downs of music emotion based on the analysis of the entire music. Second, it is difficult to analyze music emotions based on the pitch, length, and intensity of the notes, which can hardly reflect the soul and connotation of music. In this paper, an improved back propagation (BP) algorithm neural network is used to analyze music data. Because the traditional BP network tends to fall into local solutions, the selection of initial weights and thresholds directly affects the training effect. This paper introduces artificial bee colony (ABC) algorithm to improve the structure of BP neural network. The output value of the ABC algorithm is used as the weight and threshold of the BP neural network. The ABC algorithm is responsible for adjusting the weights and thresholds, and feeds back the optimal weights and thresholds to the BP neural network system. BP neural network with ABC algorithm can improve the global search ability of the BP network, while reducing the probability of the BP network falling into the local optimal solution, and the convergence speed is faster. Through experiments on public music data sets, the experimental results show that compared with other comparative models, the MER method used in this paper has better recognition effect and faster recognition speed. © Copyright © 2021 Yang.},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85116855247&doi = 10.3389%2ffpsyg.2021.760060&partnerID = 40&md5 = d8babd4e6050f14375d2b4632dfdb587},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85116855247&doi = 10.3389},
   AUTHOR_KEYWORDS = {ABC algorithm; BP neural network; emotion recognition; MediaEval Emotion in Music data set; music},
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
@@ -717,7 +717,7 @@ rbind(
   KEYWORDS = {Multimedia systems; Chorus; Emotion; MFCCs; Popular music; Rhythm; Verse; Adaptive boosting},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84912027522&doi = 10.1007%2fs11042-013-1687-2&partnerID = 40&md5 = 6ce0fe7a0b38a6e2037403e140bd0a60},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84912027522&doi = 10.1007},
   AUTHOR_KEYWORDS = {Adaboost; Chorus; Emotion; MFCCs; Popular music; Rhythm; Verse},
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
@@ -759,11 +759,11 @@ rbind(
   VOLUME = {23},
   YEAR = {2017},
   DOI = {10.1007/s00530-015-0489-y},
-  ABSTRACT = {Music emotion recognition is an important topic in music information retrieval area. A lot of acoustic features are used to train a music classification or regression emotion model. However, these existing features may not be efficient for classification or regression task. Furthermore, most works do not explain why these features do work for classification. In our work, eight features are extracted to represent the arousal dimension of music emotion, and various commonly used statistical learning methods such as Logistic Regression, and tree-based methods are applied to interpret important features. Then the shrinkage methods are applied to feature selection and classification in music emotion recognition for the first time. Our tests show that the proposed approaches are efficient for feature selection just as entropy-based filter methods, and better than wrapper methods. The shrinkage methods can produce more continuous and low variance model than wrapper methods. Then, we discover that the most useful features are low specific loudness sensation coefficients (low-SONE), root mean square and loudness-flux. Moreover, the shrinkage methods apply in logistic regression perform better for classification than most of other methods. We get an average accuracy rate of 83.8 %. © 2015, Springer-Verlag Berlin Heidelberg.},
+  ABSTRACT = {Music emotion recognition is an important topic in music information retrieval area. A lot of acoustic features are used to train a music classification or regression emotion model. However, these existing features may not be efficient for classification or regression task. Furthermore, most works do not explain why these features do work for classification. In our work, eight features are extracted to represent the arousal dimension of music emotion, and various commonly used statistical learning methods such as Logistic Regression, and tree-based methods are applied to interpret important features. Then the shrinkage methods are applied to feature selection and classification in music emotion recognition for the first time. Our tests show that the proposed approaches are efficient for feature selection just as entropy-based filter methods, and better than wrapper methods. The shrinkage methods can produce more continuous and low variance model than wrapper methods. Then, we discover that the most useful features are low specific loudness sensation coefficients (low-SONE), root mean square and loudness-flux. Moreover, the shrinkage methods apply in logistic regression perform better for classification than most of other methods. We get an average accuracy rate of 83.8 .  2015, Springer-Verlag Berlin Heidelberg.},
   KEYWORDS = {Feature extraction; Regression analysis; Shrinkage; Speech recognition; Feature selection and classification; Features learning; Features selection; Music classification; Music information retrieval; Shrinkage methods; Statistical learning; Statistical learning methods; Classification (of information)},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84944937222&doi = 10.1007%2fs00530-015-0489-y&partnerID = 40&md5 = f12764992ee29a4976644aacf6bbb43d},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84944937222&doi = 10.1007},
   AUTHOR_KEYWORDS = {Features learning; Features selection; Music arousal dimension classification; Shrinkage method; Statistical learning},
   PARADIGM = {classification},
   NOTES_CA = {include, classification},
@@ -1234,7 +1234,7 @@ MODEL_RATE_EMOTION_VALUES_MEDIAEVAL2013 = {
   KEYWORDS = {Acoustic Stimulation; Acoustics; Adult; Arousal; Emotions; Female; Humans; Linear Models; Loudness Perception; Male; Music; Predictive Value of Tests; Questionnaires; Recognition (Psychology); Young Adult; acoustics; adult; arousal; auditory stimulation; emotion; female; hearing; human; male; music; physiology; predictive value; psychology; questionnaire; recognition; statistical model; young adult},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84902376903&doi = 10.1080%2f17470218.2013.863954&partnerID = 40&md5 = 021d634d0f679aaff17d6770894daad5},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84902376903&doi = 10.1080},
   AUTHOR_KEYWORDS = {Arousal; Brunswik lens model; Emotion; Intensity; Music},
   PARADIGM = {regression},
   NOTES_CA = {include},
@@ -1718,7 +1718,7 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   KEYWORDS = {Classification (of information); Feature extraction; Gaussian distribution; Gaussian noise (electronic); Image retrieval; Support vector machines; Time series analysis; Coefficient of determination; Dimensionality reduction; Feature extraction methods; Gaussian Processes; Music emotions; Music genre classification; Music information retrieval; Prediction uncertainty; Audio acoustics},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84923317754&doi = 10.1109%2fACCESS.2014.2333095&partnerID = 40&md5 = 91033029d14599965aafb73fa7175273},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-84923317754&doi = 10.1109},
   AUTHOR_KEYWORDS = {Gaussian processes; Music emotion estimation; Music genre classification},
   PARADIGM = {regression},
   NOTES_CA = {include},
@@ -2056,7 +2056,7 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   ABSTRACT = {Music emotion recognition is increasingly becoming important in scientific research and practical applications. Due to the differences in musical characteristics between Western and Chinese classical music, it is necessary to investigate the distinctions in music emotional feature sets to improve the accuracy of cross‐cultural emotion recognition models. Therefore, a comparative study on emotion recognition in Chinese and Western classical music was conducted. Using the V‐A model as an emotional perception model, approximately 1000 pieces of Western and Chinese classical excerpts in total were selected, and approximately 20‐dimension feature sets for different emotional dimensions of different datasets were finally extracted. We considered different kinds of al-gorithms at each step of the training process, from pre‐processing to feature selection and regression model selection. The results reveal that the combination of MaxAbsScaler pre‐processing and the wrapper method using the recursive feature elimination algorithm based on extremely randomized trees is the optimal algorithm. The harmonic change detection function is a culturally universal fea-ture, whereas spectral flux is a culturally specific feature for Chinese classical music. It is also found that pitch features are more significant for Western classical music, whereas loudness and rhythm features are more significant for Chinese classical music. © 2022 by the authors. Licensee MDPI, Basel, Switzerland.},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85132193259&doi = 10.3390%2fapp12125787&partnerID = 40&md5 = 96f19b725a52bb52a769612e02f0a74c},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85132193259&doi = 10.3390},
   AUTHOR_KEYWORDS = {classical music; extreme random tree; feature selection; music emotion recognition; V‐A model},
   PARADIGM = {regression},
   NOTES_CA = {include, though reports negative r^2 values in model comparison in table 2},
@@ -2163,7 +2163,7 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   KEYWORDS = {Behavioral research; Classification (of information); Clustering algorithms; Fuzzy neural networks; Information management; Regression analysis; Speech recognition; Support vector machines; Vectors; Classifieds; Emotion recognition; K neighborhoods; Music emotion classifications; Music emotions; Music information; Percentage points; Piecewise regression; Support vector regressions; Two-dimensional; Emotion Recognition},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85140847927&doi = 10.1155%2f2022%2f9256586&partnerID = 40&md5 = 95604b41d31354a5954af89be5f47193},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85140847927&doi = 10.1155},
   PARADIGM = {regression},
   NOTES_CA = {include},
   NOTES_TE = {include, although some quality issues},
@@ -2320,8 +2320,8 @@ exp3_arousal = 0.68, exp4_arousal = 0.68),
   PARTICIPANT_ORIGIN = {Specified elsewhere}, %% presumably china
   PARTICIPANT_SAMPLING = {Specified elsewhere},
   PARTICIPANT_TASK = {Rate},
-  FEATURE_CATEGORIES = {dynamic, timbre, rhythm, tonality }, %% "we make an assumption that the arousal is only dependent on the intensity features, and valence is dependent on the whole feature sets' 
-  FEATURE_SOURCE = {MA Toolbox, MIR Toolbox, coversongs, },
+  FEATURE_CATEGORIES = {dynamic, timbre, rhythm, tonality }, %% "we make an assumption that the arousal is only dependent on the intensity features, and valence is dependent on the whole feature sets" 
+  FEATURE_SOURCE = {MA Toolbox, MIR Toolbox, coversongs},
   FEATURE_REDUCTION_METHOD = {filter methods, wrapper methods, shrinkage methods. Details: Relief-R-2, Relief-F-3, Correlation-Based (Pearson, Spearman, information-gain, gain-ratio) Forward Selection-AIC, L1-regularized logistic regression},
   MODEL_CATEGORY = {classification},
   MODEL_DETAIL = {penalized logistic regression, regularized SVM, tested models: LR,
@@ -2461,7 +2461,7 @@ alpha = 0.18, beta = 0.49},
   ABSTRACT = {In the current research, we integrate distinct learning modalities—Curriculum Learning (CL) and Reinforcement Learning (RL)—in an attempt to develop and optimize Music Emotion Recognition (MER) in piano performance. Classical approaches have never been successful when applied in the field of determining the degree of emotion in the music of the piano, owing to the substantial complexity required. Addressing this particular issue is the primary motivation for the present endeavour. In an approach that’s comparable to how human beings acquire information, it trains the RL agent CL in phases; such an approach improves the student’s learning model in understanding the diverse emotions expressed by musical compositions. A higher rating of performance can be achieved after learning the model to recognize emotions more effectively and precisely. A set of piano melodies with emotional content notes has been included in the EMOPIA repository for use when conducting the process of evaluation. In order to benchmark the proposed approach with different models, parameters including R2, Mean Absolute Error (MAE), and Root Mean Square Error (RMSE) were deployed. Studies indicate that the recommended approach accurately recognizes the emotions expressed by piano-playing music. In challenging tasks like MER, the significance of implementing the CL paradigm with the RL has been emphasized using the outcomes mentioned earlier. © 2024 by author(s).},
   PUBLICATION_STAGE = {Final},
   SOURCE = {scopus},
-  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85184876855&doi = 10.54517%2fesp.v9i4.2344&partnerID = 40&md5 = f2f5f142bc51490d199e335a63b73647},
+  URL = {https://www.scopus.com/inward/record.uri?eid = 2-s2.0-85184876855&doi = 10.54517},
   AUTHOR_KEYWORDS = {Curriculum Learning; Machine Learning; MBE; Music Emotion Recognition; piano music; Reinforcement Learning; RMSE},
   PARADIGM = {regression},
   NOTES_CA = {include},
